<resources>
    <string name="app_name">AppAsociados</string>
    <string name="txt_btn_credit">Créditos</string>
        <string name="txt_btn_credit_vivienda">Vivienda</string>
        <string name="txt_btn_credit_vehiculo">Vehículo</string>
        <string name="txt_btn_credit_lb">Libre Inversión</string>
        <string name="txt_btn_credit_bm">Bono de Mercado</string>
    <string name="txt_btn_cuenta">Cuenta</string>
    <string name="txt_btn_sgte">Siguiente</string>
    <string name="txt_btn_convenios">Convenios</string>
    <string name="txt_btn_pagos">Pagos</string>
    <string name="txt_btn_pasadias">Pasadias</string>
    <string name="txt_btn_premios">Premios</string>
    <string name="txt_btn_tueliges">Tu eliges</string>
    <string name="txt_btn_multi">C. Multipr</string>
    <string name="txt_bienvenida">Hola Carlos!</string>
    <string name="txt_noticias">Estas son las ultimas noticias</string>
    <string name="btn_cerrarSesion">Cerrar sesión</string>
</resources>